feat: Enable restart controller

--- a/tests/templates/kuttl/smoke/10-assert.yaml
+++ b/tests/templates/kuttl/smoke/10-assert.yaml
@@ -9,6 +9,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: trino-coordinator-default
+  generation: 1 # There should be no unneeded Pod restarts
 spec:
   template:
     spec:
@@ -21,6 +22,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: trino-worker-default
+  generation: 1 # There should be no unneeded Pod restarts
 spec:
   template:
     spec:
