test: Improve assertion on restart-controller

--- a/tests/templates/kuttl/smoke/10-assert.yaml
+++ b/tests/templates/kuttl/smoke/10-assert.yaml
@@ -10,6 +10,8 @@ kind: StatefulSet
 metadata:
   name: trino-coordinator-default
   generation: 1 # There should be no unneeded Pod restarts
+  labels:
+    restarter.stackable.tech/enabled: "true"
 spec:
   template:
     spec:
@@ -23,6 +25,8 @@ kind: StatefulSet
 metadata:
   name: trino-worker-default
   generation: 1 # There should be no unneeded Pod restarts
+  labels:
+    restarter.stackable.tech/enabled: "true"
 spec:
   template:
     spec:
