disable columnmasking in example

--- a/examples/simple-trino-cluster-authentication-opa-authorization-s3.yaml
+++ b/examples/simple-trino-cluster-authentication-opa-authorization-s3.yaml
@@ -11,6 +11,7 @@ spec:
       - authenticationClass: simple-trino-users
     authorization:
       opa:
+        enableColumnMasking: false
         configMapName: simple-opa
         package: trino
     catalogLabelSelector:
