--- a/tests/templates/kuttl/client-spooling/03-install-test-helper.yaml
+++ b/tests/templates/kuttl/client-spooling/03-install-test-helper.yaml
@@ -15,8 +15,8 @@ spec:
         - "sleep infinity"
       resources:
         requests:
-          cpu: "250m"
-          memory: "1024Mi"
+          cpu: 250m
+          memory: 2Gi
         limits:
-          cpu: "250m"
-          memory: "2048Mi"
+          cpu: "1"
+          memory: 2Gi
